tests/NormalTests/paczka2/big_fuzzy/95516630.err
Error in line 1: lpg6xKyaJ S420 69,5
Error in line 6: lpg6xKyaJ S507 78,7
Error in line 9: lpg6xKyaJ S42« 3«8,5
Error in line 13: CnzH14HbNb8 S42O 434,1
Error in line 8: lpg6xKyaJ S420 99,2
Error in line 7: CnzH14HbNb8 S420 91,2
Error in line 18: CnzH14HbNb8 A99 59,4
Error in line 19: CnzH14HbNb8 S420 100,0
Error in line 20: CnzH14HbNb8 S507 73,2
Error in line 26: a3khshFBN0 S507 185,58
Error in line 33: qm4UjKYzVw4 A99 92,3
Error in line 34: CnzH14HbNb8 A99 173,0
Error in line 54: PLxGA5Ray A99 154,2
Error in line 67: PLxGA5Ray S507 32,2
Error in line 68: qm4UjKYzVw4 S507 84,2
Error in line 83: CnzH14HbNb8 A99 71,48
Error in line 89: a3khshFBN0 S507 22,7
Error in line 90: qm4UjKYzVw4 S420 111,0
Error in line 111: PLxGA5Ray S507 84,9
Error in line 122: a3khshFBN0 A99 49,1
Error in line 138: A99 S420 34,0
Error in line 149: CnzH14HbNb8 A99 11,2
Error in line 150: CnzH14HbNb8 A649 60,7
Error in line 154: lpg6xKyaJ S420 132,9
Error in line 152: CnzH14HbNb8 A99 46,5
Error in line 156: a3khshFBN0 S420 28,7
Error in line 157: lpg6xKyaJ S507 66,9
Error in line 165: lpg6xKyaJ A99 34,3
Error in line 171: lpg6xKyaJ A649 79,0
Error in line 185: n2MxajUsn5K A649 152,1
Error in line 196: a3khshFBN0 A99 61,9
Error in line 206: n2MxajUsn5K S507 33,9
Error in line 242: A99 A649 77,9
